# vecx

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  arch.drawio  diagram.drawio
.github/workflows/: ci.yml  release.yml
script/: build.sh  install.sh  lint.sh  test.sh
src/: main.rs
src/api/: api.rs  api_test.rs  mod.rs
src/arg/: arg.rs  arg_test.rs  mod.rs
src/builder/: builder.rs  builder_test.rs  mod.rs
src/collector/: collector.rs  collector_test.rs  mod.rs
src/config/: config.rs  config_test.rs  mod.rs
src/memory/: memory.rs  memory_test.rs  mod.rs
src/optimizer/: mod.rs  optimizer.rs  optimizer_test.rs
src/parser/: mod.rs  parser.rs  parser_test.rs
